--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://clee06.github.io/CapstoneProject",
   "name": "classroomx",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "firebase": "^8.2.1",
     "fs": "^0.0.1-security",
+    "gh-pages": "^3.1.0",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -32,6 +34,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
